@@ -3,6 +3,7 @@ package com.github.llamarama.team;
 import com.github.llamarama.team.block.blockentity.ModBlockEntityTypes;
 import com.github.llamarama.team.client.blockentity.LlamaWoolBedBlockEntityRenderer;
 import com.github.llamarama.team.client.entity.bumblellama.BumbleLlamaEntityRenderer;
+import com.github.llamarama.team.client.entity.caravantrader.CaravanTraderRenderer;
 import com.github.llamarama.team.client.entity.woollyllama.WoollyLlamaEntityRenderer;
 import com.github.llamarama.team.entity.ModEntityTypes;
 import com.github.llamarama.team.item.ModItems;
@@ -68,8 +69,8 @@ public final class EventHandler {
     }
 
     public void addSpawnsListener(SpawnEventListener listener) {
-        listener.addSpawns((biomeSelectionContext) -> BiomeSelectors.includeByKey(this.MOUNTAIN_KEYS).test(biomeSelectionContext), SpawnGroup.CREATURE, ModEntityTypes.WOOLLY_LLAMA, 5, 3, 6);
-        listener.addSpawns((biomeSelectionContext) -> BiomeSelectors.includeByKey(BiomeKeys.FLOWER_FOREST).test(biomeSelectionContext), SpawnGroup.CREATURE, ModEntityTypes.BUMBLE_LLAMA, 3, 4, 7);
+        listener.addSpawns(BiomeSelectors.includeByKey(this.MOUNTAIN_KEYS), SpawnGroup.CREATURE, ModEntityTypes.WOOLLY_LLAMA, 5, 3, 6);
+        listener.addSpawns(BiomeSelectors.includeByKey(BiomeKeys.FLOWER_FOREST), SpawnGroup.CREATURE, ModEntityTypes.BUMBLE_LLAMA, 3, 4, 7);
     }
 
     public void addSpawnRestrictionListener() {
@@ -86,6 +87,7 @@ public final class EventHandler {
     public void addEntityRendererListener(EntityRendererListener listener) {
         listener.registerRenderer(ModEntityTypes.WOOLLY_LLAMA, WoollyLlamaEntityRenderer::new);
         listener.registerRenderer(ModEntityTypes.BUMBLE_LLAMA, BumbleLlamaEntityRenderer::new);
+        listener.registerRenderer(ModEntityTypes.CARAVAN_TRADER, CaravanTraderRenderer::new);
     }
 
 }
