@@ -1,0 +1,3 @@
+{
+  "parent": "minecraft:item/template_spawn_egg"
+}
